# auto-appearance

./: .gitignore  README.md  launchd-example.plist  pyproject.toml
.github/workflows/: ci.yaml
src/auto_appearance/: __init__.py  __main__.py  app.py
